--- a/branches/refactory-1.0/kernal/inventory_base.html
+++ b/branches/refactory-1.0/kernal/inventory_base.html
@@ -13,6 +13,7 @@
 {% endblock %}
 
 {% block mode_form %}
+		  <div id="error_msg">{{msg}}</div>
           <div id="mode_form">
             <span>Receiving Mode
             </span>  
