--- a/kernal/inventory_result.html
+++ b/kernal/inventory_result.html
@@ -57,6 +57,8 @@
                     <script type="text/javascript">
                     var sub_total = 0;
                     </script>
+                    <form action="/product/inventory/cost/update/">
+                    <input type=hidden name="inStockBatch_pk" value="{{inStockBatch.pk}}"/>
 					<table>   
 						  <tr>        
 							<td colspan="5" class="border-bottom"></td>    
@@ -77,7 +79,7 @@
 							<td class="Receipt itemno"> {{forloop.counter}} {{inStockRecord.product.name}}</td>
 							<td class="Receipt">{{inStockRecord.product.description}} {% if  inStockRecord.serial_no.serial_no %}<span style="font-weight: bolder; padding: 0 0 0 1em"> IMEI: {{inStockRecord.serial_no.serial_no}}</span>{% endif %}</td>
 							<td class="right qty">{{inStockRecord.quantity}}</td>
-							<td align="right" class="price">{{inStockRecord.cost}}</td>
+							<td align="right" class="price"><input name="inStockRecord_{{inStockRecord.pk}}" value="{{inStockRecord.cost}}" size=10></input></td>
 							<td align="right" class="price">
                                 <script>
                                     function roundNumber(number, decimals) { // Arguments: number to round, number of decimal places
@@ -101,7 +103,9 @@
                             {% endif %}
 							</tr>                            
 						{% endfor %}			  
-					</table>				
+					</table>
+					<input type="Submit" value="Update Cost"/>
+					</form>				
                 {% endblock %}        
 
             {% block bill_summary%}
