--- a/kernal/counter_list.html
+++ b/kernal/counter_list.html
@@ -8,12 +8,13 @@
 
 {% block content %}
         <div class="span-24">
-            <div class="span-20">
+            <div class="span-19">
                 Product List
             </div>
 
-            <div class="span-4 last">
+            <div class="span-5 last">
                 <a href="/admin/kernal/counter/add/">Open Counter</a>
+                <a href="/admin/kernal/counter/">Counter History</a>
             </div>
         <form id="deleteForm" action="{{submit_form}}" method="get">
             
