--- a/kernal/inventory_result.html
+++ b/kernal/inventory_result.html
@@ -3,6 +3,7 @@
 {% endblock %}
 
 					{% block PageTitle %}
+						<div id="error_msg">{{error_msg}}</div>
 						<div id="PageTitle">
 							Receiving Record
 						</div>					
