--- a/kernal/consignment_in_balance_form.html
+++ b/kernal/consignment_in_balance_form.html
@@ -2,7 +2,7 @@
 
 
 {% block hiddenValue %}
-    <input type="hidden" name="salesMode" value="Consignment_in_balance"/>
+		  <input type="hidden" name="mode" value="ConsignmentInReturn"/>
 {% endblock %}
 
 {% block title%}
@@ -20,7 +20,6 @@
               </option>  
             </select>
           </div>  -->
-		  <input type="hidden" name="mode" value="Consignment_IN"/>
 {% endblock %}
 
 {% block Supplier %}		
