--- a/kernal/bill.html
+++ b/kernal/bill.html
@@ -227,6 +227,13 @@ th,td{
               </tr>            
               <tr>        
 				<td  align="right" class="summary" >            </td>        			  
+				<td  align="right" class="summary" >            </td>        
+				<td  align="right" class="summary" >            </td>        
+                <td  align="right" class="summary" >            Deposit         </td>        
+                <td align="right" class="summary" >            {{bill.deposit_price}}       </td>    
+              </tr>                          
+              <tr>        
+				<td  align="right" class="summary" >            </td>        			  
                 <td align="right" class="summary" >                     </td>        
                 <td align="right" class="summary" >            </td>    
                 <td  align="right" class="summary border-bottom" >            Total         </td>        
