--- a/kernal/inventory_base.html
+++ b/kernal/inventory_base.html
@@ -23,7 +23,9 @@
 			  <option value="trade-in">Trade-in
               </option>  			  
               <option value="warranty">Warranty
-              </option>  
+              </option>
+              <option value="warranty">Pawning
+              </option>                
             </select>
           </div>   
 {% endblock %}
